fixed cusip
